fix: dont 'fatal IDE error' when cluster is not reachable (#621)
Signed-off-by: Andre Dietisheim <adietish@redhat.com>